Revision history for Perl distribution Tree::Persist

1.01  Thu Oct  4 10:27:00 2012
	- Ron Savage is now co-maint.
	- Re-write MySQL-specific code, which is only used in the tests.
	- Rename Changes to CHANGES.
	- Use ini.report.pl (shipped with Module::Metadata::Changes) to add Changelog.ini to the distro.
	- Reformat the dates in this file.
	- Clean up the POD.
	- Re-work Makefile.PL rather than have Build.PL generate it.
	- Copy sub _strip_options() from Tree and add to Tree::Persist::Base. Then call it from within the
		subs returned from _add_child_handler() and _remove_child_handler().
		This resolves RT#61740, thereby allowing trees to be read in from a db and inserted into another
		tree, and visa versa, i.e. allow trees to be inserted into a tree read in from a db.
	- Add t/008_add_from_db.t to test this patch.
	- Add an FAQ, whose first item explains using $ENV{DBI_DSN} etc to control the test database,
		and that DBD::SQLite is used by default.
	- Add code to File::Temp -> newdir(...) in tests to help run under BSD-based systems.
	- Add scripts/xml.demo.pl and scripts/store.xml.

0.99  Mon Oct 31 10:30:00 2005
  - Split out from Forest