@@ -16,6 +16,8 @@ Revision history for Perl distribution Tree::Persist
 	- Add an FAQ, whose first item explains using $ENV{DBI_DSN} etc to control the test database,
 		and that DBD::SQLite is used by default.
 	- Add code to File::Temp -> newdir(...) in tests to help run under BSD-based systems.
+	- Encode the 5 built-in XML character entities (within the node's value) when writing to an XML file.
+		They are decoded by XML::Parser when the file is read back in.
 	- Add scripts/xml.demo.pl and scripts/store.xml.
 
 0.99  Mon Oct 31 10:30:00 2005
